# C-Plus-Plus-Chess

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  main.cpp
ChessBoard/enums/: PieceType.h  Player.h
ChessBoard/headers/: Board.h  BoardSpace.h  ChessMovementMediator.h  ChessMovementUtils.h  ChessPiece.h  Coordinates.h  Game.h  HintMarker.h  Point.h
ChessBoard/headers/ChessPieces/: Bishop.h  ChessPiece.h  Coordinates.h  EmptyPiece.h  King.h  Knight.h  NullPiece.h  Pawn.h  Queen.h  Resources.h  Rook.h
ChessBoard/headers/views/: chessview.cpp  chessview.h  chessview.ui
ChessBoard/src/: Board.cpp  BoardSpace.cpp  ChessMovementMediator.cpp  ChessMovementUtils.cpp  ChessPiece.cpp  Coordinates.cpp  Game.cpp  HintMarker.cpp
ChessBoard/src/ChessPieces/: Bishop.cpp  EmptyPiece.cpp  King.cpp  Knight.cpp  NullPiece.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
ChessBoard/views/: ChessView.cpp  ChessView.h  ChessView.ui
ChessBoard/views/MainChessView/: ChessView.cpp  ChessView.h  ChessView.ui
ChessBoard/views/PawnPromotionView/: PawnPromotionView.cpp  PawnPromotionView.h  PawnPromotionView.ui
resources/: res.qrc
